# src/server.js
@@ -1,5 +1,5 @@
 require('dotenv').config(); // Load environment variables from .env file
-const { serverSwagger } = require('./serverUtils');
+const { serverSwagger, serverAuthorization } = require('./serverUtils');
 const Routes = require('./controllers/index');
 const express = require('express');
 const https = require('https');
@@ -12,11 +12,14 @@ const port = process.env.PORT; // Read port from environment variable
 // Middleware to parse JSON request bodies
 app.use(express.json());
 
-// Register routes-> User Router
-new Routes(app);
-
 // swagger integration
 serverSwagger(app);
+
+// JWT authorization middleware
+app.use(/^(?!.*\/anonymous).*/, serverAuthorization.authenticate);
+
+// Register routes-> User Router
+new Routes(app);
 
 const keyPath = process.env.SSL_KEY_PATH;
 const certPath = process.env.SSL_CERT_PATH;
